small design notification fix

--- a/res/layout/notification_item.xml
+++ b/res/layout/notification_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="55dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/white_selector"
     android:clickable="true"
     android:focusable="true"
@@ -10,16 +10,16 @@
 
     <RelativeLayout
         android:id="@+id/rlImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:gravity="center" >
 
         <ImageView
             android:id="@+id/ivImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerInParent="true"
             android:background="@color/loading_background"
             android:contentDescription="@null"
@@ -29,8 +29,8 @@
         <ProgressBar
             android:id="@+id/pbLoadingForImage"
             style="@style/CustomProgressBar"
-            android:layout_width="20px"
-            android:layout_height="20px"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_centerInParent="true"
             android:visibility="gone" />
     </RelativeLayout>
