--- a/res/layout/dialog_delete_message.xml
+++ b/res/layout/dialog_delete_message.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" 
+    android:padding="20dp">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/delete_dialog_root"
         android:contentDescription="@null"
-        android:src="@drawable/dialog_bubble" />
+        android:src="@drawable/dialog_bubble"
+        android:scaleType="fitXY"
+         />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_margin="10dp"
-        android:paddingTop="50dp"
-        android:paddingBottom="20dp">
+        android:paddingTop="80dp"
+        android:paddingBottom="80dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp">
         <ToggleButton
             android:id="@+id/dont_delete"
             android:layout_width="match_parent"
@@ -28,6 +32,7 @@
         	android:paddingRight="10dp"
         	android:layout_margin="3dp"
         	android:layout_gravity="center"
+        	android:gravity="center"
         	android:layout_weight="1"
         	android:text="@string/dont_delete"
         	android:textColor="@android:color/white"
@@ -43,6 +48,7 @@
         	android:paddingRight="10dp"
         	android:layout_margin="3dp"
         	android:layout_gravity="center"
+        	android:gravity="center"
         	android:layout_weight="1"
         	android:text="@string/delete_now"
         	android:textColor="@android:color/white"
@@ -58,6 +64,7 @@
         	android:paddingRight="10dp"
         	android:layout_margin="3dp"
         	android:layout_gravity="center"
+        	android:gravity="center"
         	android:layout_weight="1"
         	android:text="@string/delete_in_5_min"
         	android:textColor="@android:color/white"
@@ -73,6 +80,7 @@
         	android:paddingRight="10dp"
         	android:layout_margin="3dp"
         	android:layout_gravity="center"
+        	android:gravity="center"
         	android:layout_weight="1"
         	android:text="@string/delete_after_1_day"
         	android:textColor="@android:color/white"
@@ -88,6 +96,7 @@
         	android:paddingRight="10dp"
         	android:layout_margin="3dp"
         	android:layout_gravity="center"
+        	android:gravity="center"
         	android:layout_weight="1"
         	android:text="@string/delete_after_a_week"
         	android:textColor="@android:color/white"
@@ -103,6 +112,7 @@
         	android:paddingRight="10dp"
         	android:layout_margin="3dp"
         	android:layout_gravity="center"
+        	android:gravity="center"
         	android:layout_weight="1"
         	android:text="@string/delete_after_user_sees_it"
         	android:textColor="@android:color/white"
@@ -118,6 +128,7 @@
         	android:paddingRight="10dp"
         	android:layout_margin="3dp"
         	android:layout_gravity="center"
+        	android:gravity="center"
         	android:layout_weight="1"
         	android:text="@string/OK"
         	android:textColor="@android:color/white"
