--- a/res/layout/dialog_delete_message.xml
+++ b/res/layout/dialog_delete_message.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
     android:padding="20dp">
@@ -20,10 +19,22 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingTop="80dp"
+        android:paddingTop="40dp"
         android:paddingBottom="80dp"
         android:paddingLeft="40dp"
         android:paddingRight="40dp">
+        <TextView 
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+        	android:paddingRight="10dp"
+        	android:layout_margin="3dp"
+        	android:text="@string/delete_the_message"
+        	android:textColor="@color/button_neutral_off"
+        	android:textSize="16sp"/>
         <ToggleButton
             android:id="@+id/dont_delete"
             android:layout_width="match_parent"
@@ -130,7 +141,7 @@
         	android:layout_gravity="center"
         	android:gravity="center"
         	android:layout_weight="1"
-        	android:text="@string/OK"
+        	android:text="@string/delete_close"
         	android:textColor="@android:color/white"
         	android:background="@drawable/rounded_rect_positive_selector"
             />
