--- a/res/layout/notification_item.xml
+++ b/res/layout/notification_item.xml
@@ -37,12 +37,11 @@
 
     <com.cloverstudio.spika.view.MyriadProTextView
         android:id="@+id/tvMessage"
+        android:text="Support posted message to group Clover Studio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="6dp"
-        android:layout_toLeftOf="@+id/rlNotificationsNumber"
+        android:layout_toLeftOf="@+id/ivArrow"
         android:layout_toRightOf="@+id/rlImage"
         android:maxLines="2"
         android:textSize="16sp" />
